<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LayoutPrincipal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/LayoutTipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_informacion"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/rg_elecciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp">

            <RadioButton
                android:id="@+id/rb_eleccion1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/rb_eleccion1" />

            <RadioButton
                android:id="@+id/rb_eleccion2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rb_eleccion2" />

            <RadioButton
                android:id="@+id/rb_eleccion3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rb_eleccion3" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LayoutDeporte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_deporte"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spDeportes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:entries="@array/deportesIndividuales"
            android:gravity="center"
            android:spinnerMode="dialog" />
    </LinearLayout>

    <TextView
        android:id="@+id/lbl_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gugi"
        android:textAlignment="center"
        android:textColor="@color/lbl_info"
        android:textSize="48sp" />

</LinearLayout>